# chat

./: .gitignore  CHANGELOG.md  Cargo.toml  cliff.toml
.github/workflows/: build.yml
api_tests/: auth.rest
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  app.yaml
chat_server/fixtures/: decoding.pem  encoding.pem  test.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs
chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
migrations/: 20240601042431_initial.sql  20240618130125_workspace.sql
notify_server/: Cargo.toml  index.html  notif.yaml
notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notif.rs  sse.rs
rest_client/: auth.rest  chat.rest  message.rest
src/: config.rs  lib.rs  main.rs
src/handlers/: auth.rs  messages.rs
